--- a/SGH-T959V/recovery.rc
+++ b/SGH-T959V/recovery.rc
@@ -112,7 +112,7 @@ loglevel 3
 # mount mtd partitions
     # Mount /system rw first to give the filesystem a chance to save a checkpoint
     #mount yaffs2 mtd@system /system
-    mount rfs /dev/block/stl9 /system check=no
+    #mount rfs /dev/block/stl9 /system check=no
     #mount yaffs2 mtd@system /system ro remount
     
     # Added by drhonk
@@ -125,7 +125,7 @@ loglevel 3
     # We chown/chmod /data again so because mount is run as root + defaults
     # mount yaffs2 mtd@userdata /data nosuid nodev
     mkdir /data
-    mount rfs /dev/block/stl10 /data nosuid nodev check=no
+    #mount rfs /dev/block/stl10 /data nosuid nodev check=no
     #mount rfs /dev/block/mmcblk0p2 /data nosuid nodev check=no
     chown system system /data
     chmod 0771 /data
@@ -329,19 +329,19 @@ on boot
 
 ## Daemon processes to be run by init.
 ##
-service console /system/bin/sh
-    console
+#service console /system/bin/sh
+#    console
 
 service recovery /system/bin/recovery
     console
     oneshot
-
-# adbd is controlled by the persist.service.adb.enable system property
-service adbd /sbin/adbd recovery
-    enabled
 
 on property:persist.service.adb.enable=1
     start adbd
 
 on property:persist.service.adb.enable=0
     stop adbd
+
+# adbd is controlled by the persist.service.adb.enable system property
+service adbd /sbin/adbd recovery
+    enabled
